--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,23 +9,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data
-            android:name="xposedmodule"
-            android:value="true" />
-        <meta-data
-            android:name="xposeddescription"
-            android:value="Vizpower Hook 测试程序." />
-        <meta-data
-            android:name="xposedminversion"
-            android:value="53" />
-
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="xposeddescription"
+            android:value="Vizpower Hook 测试程序." />
+        <meta-data
+            android:name="xposedminversion"
+            android:value="53" />
+        <meta-data
+            android:name="xposedmodule"
+            android:value="true" />
+
+        <provider
+            android:name=".activity.MyContentProvider"
+            android:authorities="me.lyc8503.vizpowerhook"
+            android:enabled="true"
+            android:exported="true"></provider>
     </application>
 
 </manifest>
