所有功能初步debug完成 !! 先发版本Build1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,11 @@ before_install:
 
 script:
   - "./gradlew assembleRelease"
+
+deploy:
+  provider: releases
+  api_key: ${GITHUB_TOKEN}
+  skip_cleanup: true
+  on:
+    tags: true
+    repo: lyc8503/VizpowerHook
